Palladium-JazzHR/src/objects/JazzHR_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Api_Key__c</fullName>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <description>Use this field when admin needs to run daily batch for JazzHR for given date. If this value is blank in the custom setting, batches will run for YESTERDAY by default.</description>
        <inlineHelpText>Use this field when admin needs to run daily batch for JazzHR for given date. If this value is blank in the custom setting, batches will run for YESTERDAY by default. Make sure to make this field blank after batch execution completes.</inlineHelpText>
        <label>Batch Run Date (YYYY-MM-DD)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, Applicant Sync option to Send Email will be activated. If Unchecked, Send Email option will be disabled.</description>
        <inlineHelpText>If checked, Applicant Sync option to Send Email will be activated. If Unchecked, Send Email option will be disabled.</inlineHelpText>
        <label>Enable Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>JazzHR Setting</label>
</CustomObject>